--- a/notebooks/training-results-fp16-batched.ipynb
+++ b/notebooks/training-results-fp16-batched.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f0a04b5c-80bb-413c-998f-2f442c96e456",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2619a3d4",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a10c8838",
    "metadata": {},
    "outputs": [
@@ -44,6 +44,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ADD_BOU: True\n",
+      "ADD_EOU: True\n",
+      "ADD_SPEAKER_TOKENS: True\n",
+      "NUM_TRAIN_EPOCHS: 5\n",
+      "REPLACE_NAMES_IN_UTTERANCES: False\n",
+      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
+      "model_checkpoint: roberta-large\n",
+      "num_future_utterances: 1000\n",
+      "num_past_utterances: 1000\n",
+      "path: results/MELD/roberta-large/2021-06-02-11-56-09/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6724572546276034, 'std': 0.0031377299187237894, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6596394257273535, 'std': 0.006374465023475231, 'num_samples': 5}\n",
+      "\n",
       "ADD_BOU: False\n",
       "ADD_EOU: False\n",
       "ADD_SPEAKER_TOKENS: True\n",
@@ -72,6 +85,19 @@
       "\n",
       "ADD_BOU: True\n",
       "ADD_EOU: True\n",
+      "ADD_SPEAKER_TOKENS: True\n",
+      "NUM_TRAIN_EPOCHS: 5\n",
+      "REPLACE_NAMES_IN_UTTERANCES: False\n",
+      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
+      "model_checkpoint: roberta-large\n",
+      "num_future_utterances: 0\n",
+      "num_past_utterances: 1000\n",
+      "path: results/MELD/roberta-large/2021-06-02-23-19-11/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6536702205272447, 'std': 0.006294536641775711, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6449831039755038, 'std': 0.004582570632582696, 'num_samples': 5}\n",
+      "\n",
+      "ADD_BOU: True\n",
+      "ADD_EOU: True\n",
       "ADD_SPEAKER_TOKENS: False\n",
       "NUM_TRAIN_EPOCHS: 5\n",
       "REPLACE_NAMES_IN_UTTERANCES: False\n",
@@ -82,6 +108,19 @@
       "path: results/MELD/roberta-large/2021-06-01-09-21-19/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6518534387314564, 'std': 0.006775844426909927, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6428660949787497, 'std': 0.008723565921517358, 'num_samples': 5}\n",
+      "\n",
+      "ADD_BOU: True\n",
+      "ADD_EOU: True\n",
+      "ADD_SPEAKER_TOKENS: True\n",
+      "NUM_TRAIN_EPOCHS: 5\n",
+      "REPLACE_NAMES_IN_UTTERANCES: False\n",
+      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
+      "model_checkpoint: roberta-large\n",
+      "num_future_utterances: 0\n",
+      "num_past_utterances: 1000\n",
+      "path: results/MELD/roberta-large/2021-06-02-16-05-53/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.5880662376365651, 'std': 0.06392824122225388, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6024478734410832, 'std': 0.05453097847355992, 'num_samples': 5}\n",
       "\n"
      ]
     }
@@ -130,6 +169,32 @@
       "path: results/IEMOCAP/roberta-large/2021-06-01-03-03-58/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6366509934734441, 'std': 0.008542158586976677, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6688823566871317, 'std': 0.006678758101777102, 'num_samples': 5}\n",
+      "\n",
+      "ADD_BOU: True\n",
+      "ADD_EOU: True\n",
+      "ADD_SPEAKER_TOKENS: True\n",
+      "NUM_TRAIN_EPOCHS: 5\n",
+      "REPLACE_NAMES_IN_UTTERANCES: False\n",
+      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
+      "model_checkpoint: roberta-large\n",
+      "num_future_utterances: 0\n",
+      "num_past_utterances: 1000\n",
+      "path: results/IEMOCAP/roberta-large/2021-06-03-10-55-22/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6399719628000458, 'std': 0.0035058475115925854, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6667129208182064, 'std': 0.007050170131147337, 'num_samples': 5}\n",
+      "\n",
+      "ADD_BOU: True\n",
+      "ADD_EOU: True\n",
+      "ADD_SPEAKER_TOKENS: True\n",
+      "NUM_TRAIN_EPOCHS: 5\n",
+      "REPLACE_NAMES_IN_UTTERANCES: False\n",
+      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
+      "model_checkpoint: roberta-large\n",
+      "num_future_utterances: 1000\n",
+      "num_past_utterances: 1000\n",
+      "path: results/IEMOCAP/roberta-large/2021-06-02-20-14-31/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6317212286186202, 'std': 0.010296740874096022, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6637575119608033, 'std': 0.005854311769631786, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU: True\n",
       "ADD_EOU: True\n",
