--- a/notebooks/model-test.ipynb
+++ b/notebooks/model-test.ipynb
@@ -36,17 +36,17 @@
     }
    ],
    "source": [
-    "ROOT_DIR = './multimodal-datasets/'\n",
+    "ROOT_DIR = \"./multimodal-datasets/\"\n",
     "# model_checkpoint= '/home/tk/repos/erc/results/MELD/roberta-large/SEEDS/2021-05-08-19-57-31-speaker_mode-upper-num_past_utterances-1000-num_future_utterances-1000-batch_size-4-seed-4/checkpoint-9992/'\n",
     "# model_checkpoint = '/home/tk/repos/erc/results/IEMOCAP/roberta-large/SEEDS/2021-05-08-16-15-19-speaker_mode-upper-num_past_utterances-1000-num_future_utterances-1000-batch_size-4-seed-2/checkpoint-5975/'\n",
-    "model_checkpoint = '/home/tk/repos/erc/results/IEMOCAP/roberta-large/SEEDS/2021-05-09-12-19-54-speaker_mode-upper-num_past_utterances-1000-num_future_utterances-0-batch_size-4-seed-4/checkpoint-5975/'\n",
+    "model_checkpoint = \"/home/tk/repos/erc/results/IEMOCAP/roberta-large/SEEDS/2021-05-09-12-19-54-speaker_mode-upper-num_past_utterances-1000-num_future_utterances-0-batch_size-4-seed-4/checkpoint-5975/\"\n",
     "\n",
-    "DATASET = model_checkpoint.split('/')[6]\n",
-    "params = model_checkpoint.split('/')[9]\n",
-    "speaker_mode = params.split('-')[7]\n",
-    "num_past_utterances = int(params.split('-')[9])\n",
-    "num_future_utterances = int(params.split('-')[11])\n",
-    "SEED = int(params.split('-')[-1])\n",
+    "DATASET = model_checkpoint.split(\"/\")[6]\n",
+    "params = model_checkpoint.split(\"/\")[9]\n",
+    "speaker_mode = params.split(\"-\")[7]\n",
+    "num_past_utterances = int(params.split(\"-\")[9])\n",
+    "num_future_utterances = int(params.split(\"-\")[11])\n",
+    "SEED = int(params.split(\"-\")[-1])\n",
     "\n",
     "DATASET, speaker_mode, num_past_utterances, num_future_utterances, SEED"
    ]
@@ -74,19 +74,26 @@
     "from utils import get_num_classes, ErcTextDataset\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "NUM_CLASSES = get_num_classes(DATASET)\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    model_checkpoint, use_fast=True)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint, use_fast=True)\n",
     "\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\n",
-    "    model_checkpoint, num_labels=NUM_CLASSES)\n",
+    "    model_checkpoint, num_labels=NUM_CLASSES\n",
+    ")\n",
     "\n",
     "model.eval()\n",
     "model.cpu()\n",
-    "ds_test = ErcTextDataset(DATASET=DATASET, SPLIT='test', speaker_mode=speaker_mode,\n",
-    "                         num_past_utterances=num_past_utterances, num_future_utterances=num_future_utterances,\n",
-    "                         model_checkpoint='roberta-large',\n",
-    "                         ROOT_DIR=ROOT_DIR, SEED=SEED)\n",
+    "ds_test = ErcTextDataset(\n",
+    "    DATASET=DATASET,\n",
+    "    SPLIT=\"test\",\n",
+    "    speaker_mode=speaker_mode,\n",
+    "    num_past_utterances=num_past_utterances,\n",
+    "    num_future_utterances=num_future_utterances,\n",
+    "    model_checkpoint=\"roberta-large\",\n",
+    "    ROOT_DIR=ROOT_DIR,\n",
+    "    SEED=SEED,\n",
+    ")\n",
     "\n",
     "# ds_train = ErcTextDataset(DATASET=DATASET, SPLIT='train', speaker_mode=speaker_mode,\n",
     "#                          num_past_utterances=num_past_utterances, num_future_utterances=num_future_utterances,\n",
@@ -113,33 +120,49 @@
     "        else:\n",
     "            idx_ = idx\n",
     "        random_sample = ds_test[idx_]\n",
-    "        input_ids, attention_mask, labelid = random_sample['input_ids'], random_sample['attention_mask'], random_sample['label']\n",
+    "        input_ids, attention_mask, labelid = (\n",
+    "            random_sample[\"input_ids\"],\n",
+    "            random_sample[\"attention_mask\"],\n",
+    "            random_sample[\"label\"],\n",
+    "        )\n",
     "        break\n",
-    "#         if len(input_ids) < max_tokens and labelid != 0:\n",
-    "#             break\n",
+    "    #         if len(input_ids) < max_tokens and labelid != 0:\n",
+    "    #             break\n",
     "\n",
     "    decoded = tokenizer.decode(input_ids)\n",
     "\n",
     "    input_ids = torch.tensor(input_ids).view(-1, len(input_ids))\n",
     "    attention_mask = torch.tensor(attention_mask).view(-1, len(attention_mask))\n",
     "    labelid = torch.tensor(labelid).view(-1, 1)\n",
-    "    \n",
     "\n",
     "    return idx_, input_ids, attention_mask, labelid, decoded\n",
     "\n",
-    "def return_coeffs(tokenizer, input_ids, attentions, BATCH_IDX=0, LAYER=-1, QUERY_TOKEN_IDX=0, annoying_char='Ġ'):\n",
+    "\n",
+    "def return_coeffs(\n",
+    "    tokenizer,\n",
+    "    input_ids,\n",
+    "    attentions,\n",
+    "    BATCH_IDX=0,\n",
+    "    LAYER=-1,\n",
+    "    QUERY_TOKEN_IDX=0,\n",
+    "    annoying_char=\"Ġ\",\n",
+    "):\n",
     "    tokens = tokenizer.convert_ids_to_tokens(input_ids[BATCH_IDX].tolist())\n",
     "    QUERY_TOKEN = tokens[QUERY_TOKEN_IDX].split(annoying_char)[-1]\n",
     "\n",
-    "    coeffs = attentions[LAYER][BATCH_IDX].cpu().detach().numpy().sum(axis=0)[QUERY_TOKEN_IDX]\n",
+    "    coeffs = (\n",
+    "        attentions[LAYER][BATCH_IDX].cpu().detach().numpy().sum(axis=0)[QUERY_TOKEN_IDX]\n",
+    "    )\n",
     "    coeffs /= coeffs.sum()\n",
-    "    \n",
-    "    idx_token_coeffs = [(idx, token.split(annoying_char)[-1], coeffs[idx]) for idx, token in enumerate(tokens)]\n",
-    "    \n",
+    "\n",
+    "    idx_token_coeffs = [\n",
+    "        (idx, token.split(annoying_char)[-1], coeffs[idx])\n",
+    "        for idx, token in enumerate(tokens)\n",
+    "    ]\n",
+    "\n",
     "    assert len(coeffs) == len(tokens) == len(idx_token_coeffs)\n",
-    "    \n",
-    "    \n",
-    "    return QUERY_TOKEN, coeffs, tokens, idx_token_coeffs\n"
+    "\n",
+    "    return QUERY_TOKEN, coeffs, tokens, idx_token_coeffs"
    ]
   },
   {
@@ -176,11 +199,18 @@
     "from tqdm.notebook import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "idx, input_ids, attention_mask, labelid, decoded = get_random_sample(ds_test, tokenizer, max_tokens=512)\n",
+    "idx, input_ids, attention_mask, labelid, decoded = get_random_sample(\n",
+    "    ds_test, tokenizer, max_tokens=512\n",
+    ")\n",
     "pprint.pprint(f\"{decoded}\")\n",
     "print()\n",
     "\n",
-    "outputs = model(**{'input_ids': input_ids, 'attention_mask': attention_mask}, labels=labelid, output_attentions=True, output_hidden_states=True)\n",
+    "outputs = model(\n",
+    "    **{\"input_ids\": input_ids, \"attention_mask\": attention_mask},\n",
+    "    labels=labelid,\n",
+    "    output_attentions=True,\n",
+    "    output_hidden_states=True,\n",
+    ")\n",
     "attentions = outputs.attentions\n",
     "pred = int(outputs.logits.argmax().numpy())\n",
     "truth = int(labelid[0][0].numpy())\n",
@@ -242,17 +272,19 @@
     }
    ],
    "source": [
-    "QUERY_TOKEN, coeffs, tokens, idx_token_coeffs = return_coeffs(tokenizer, input_ids, attentions, LAYER=-1, QUERY_TOKEN_IDX=0)\n",
+    "QUERY_TOKEN, coeffs, tokens, idx_token_coeffs = return_coeffs(\n",
+    "    tokenizer, input_ids, attentions, LAYER=-1, QUERY_TOKEN_IDX=0\n",
+    ")\n",
     "\n",
     "plt.figure()\n",
-    "plt.plot(coeffs);\n",
-    "plt.title(f'query: {QUERY_TOKEN}')\n",
+    "plt.plot(coeffs)\n",
+    "plt.title(f\"query: {QUERY_TOKEN}\")\n",
     "plt.show()\n",
     "\n",
     "print(idx_token_coeffs)\n",
     "print()\n",
     "\n",
-    "top_10 = sorted(idx_token_coeffs, key=lambda x:-x[2])[:10]\n",
+    "top_10 = sorted(idx_token_coeffs, key=lambda x: -x[2])[:10]\n",
     "print(top_10)"
    ]
   },
@@ -285,17 +317,19 @@
     }
    ],
    "source": [
-    "QUERY_TOKEN, coeffs, tokens, idx_token_coeffs = return_coeffs(tokenizer, input_ids, attentions, LAYER=0, QUERY_TOKEN_IDX=443)\n",
+    "QUERY_TOKEN, coeffs, tokens, idx_token_coeffs = return_coeffs(\n",
+    "    tokenizer, input_ids, attentions, LAYER=0, QUERY_TOKEN_IDX=443\n",
+    ")\n",
     "\n",
     "plt.figure()\n",
-    "plt.plot(coeffs);\n",
-    "plt.title(f'query: {QUERY_TOKEN}')\n",
+    "plt.plot(coeffs)\n",
+    "plt.title(f\"query: {QUERY_TOKEN}\")\n",
     "plt.show()\n",
     "\n",
     "print(idx_token_coeffs)\n",
     "print()\n",
     "\n",
-    "top_10 = sorted(idx_token_coeffs, key=lambda x:-x[2])[:10]\n",
+    "top_10 = sorted(idx_token_coeffs, key=lambda x: -x[2])[:10]\n",
     "print(top_10)"
    ]
   },
