--- a/notebooks/training-results-fp16-batched.ipynb
+++ b/notebooks/training-results-fp16-batched.ipynb
@@ -31,42 +31,47 @@
     "import numpy as np\n",
     "import pprint\n",
     "\n",
+    "\n",
     "def parse_path(path):\n",
-    "    if 'val' in os.path.basename(path):\n",
-    "        SPLIT = 'val'\n",
-    "    elif 'test' in os.path.basename(path):\n",
-    "        SPLIT = 'test'\n",
+    "    if \"val\" in os.path.basename(path):\n",
+    "        SPLIT = \"val\"\n",
+    "    elif \"test\" in os.path.basename(path):\n",
+    "        SPLIT = \"test\"\n",
     "    else:\n",
     "        raise ValueError\n",
-    "    splits = path.split('/')\n",
+    "    splits = path.split(\"/\")\n",
     "    DATASET = splits[0]\n",
     "    roberta = splits[1]\n",
-    "    seed_details = splits[3].split('-')\n",
-    "    \n",
-    "    timestamp = '-'.join(seed_details[:6])   \n",
-    "    \n",
+    "    seed_details = splits[3].split(\"-\")\n",
+    "\n",
+    "    timestamp = \"-\".join(seed_details[:6])\n",
+    "\n",
     "    speaker_mode = seed_details[7]\n",
-    "    assert speaker_mode in ['upper', 'None', 'title']\n",
+    "    assert speaker_mode in [\"upper\", \"None\", \"title\"]\n",
     "    num_past_utterances = int(seed_details[9])\n",
     "    num_future_utterances = int(seed_details[11])\n",
     "    bsz = int(seed_details[13])\n",
     "    seed = int(seed_details[15])\n",
-    "    \n",
-    "    to_return = {'DATASET': DATASET, \n",
-    "                 'SPLIT': SPLIT,  \n",
-    "                 'roberta': roberta, \n",
-    "                 'speaker_mode': speaker_mode, \n",
-    "                 'num_past_utterances': num_past_utterances, \n",
-    "                 'num_future_utterances': num_future_utterances, \n",
-    "                 'bsz': bsz, \n",
-    "                 'seed': seed,\n",
-    "                'timestamp':timestamp} \n",
+    "\n",
+    "    to_return = {\n",
+    "        \"DATASET\": DATASET,\n",
+    "        \"SPLIT\": SPLIT,\n",
+    "        \"roberta\": roberta,\n",
+    "        \"speaker_mode\": speaker_mode,\n",
+    "        \"num_past_utterances\": num_past_utterances,\n",
+    "        \"num_future_utterances\": num_future_utterances,\n",
+    "        \"bsz\": bsz,\n",
+    "        \"seed\": seed,\n",
+    "        \"timestamp\": timestamp,\n",
+    "    }\n",
     "    return to_return\n",
     "\n",
+    "\n",
     "def read_json(path):\n",
-    "    with open(path, 'r') as stream:\n",
+    "    with open(path, \"r\") as stream:\n",
     "        foo = json.load(stream)\n",
     "    return foo\n",
+    "\n",
     "\n",
     "def merge_two_dicts(a, b):\n",
     "    c = {}\n",
@@ -74,58 +79,93 @@
     "        c[key] = val\n",
     "    for key, val in b.items():\n",
     "        c[key] = val\n",
-    "        \n",
+    "\n",
     "    return c\n",
     "\n",
+    "\n",
     "def return_by_timestamp(seed_results):\n",
-    "    timestamps = set([foo['timestamp'] for foo in seed_results])\n",
-    "    seed_results = {timestamp: [foo for foo in seed_results if foo['timestamp'] == timestamp] for timestamp in timestamps}\n",
-    "        \n",
+    "    timestamps = set([foo[\"timestamp\"] for foo in seed_results])\n",
+    "    seed_results = {\n",
+    "        timestamp: [foo for foo in seed_results if foo[\"timestamp\"] == timestamp]\n",
+    "        for timestamp in timestamps\n",
+    "    }\n",
+    "\n",
     "    return seed_results\n",
     "\n",
+    "\n",
     "def return_metrics(seed_results):\n",
-    "    \n",
+    "\n",
     "    to_return = {}\n",
     "    for timestamp, foo in seed_results.items():\n",
-    "        stats_val = [bar for bar in foo if bar['SPLIT'] == 'val']\n",
-    "        stats_test = [bar for bar in foo if bar['SPLIT'] == 'test']\n",
-    "        \n",
-    "        for metric in  ['DATASET', 'roberta', 'speaker_mode', 'num_past_utterances', 'num_future_utterances']:\n",
+    "        stats_val = [bar for bar in foo if bar[\"SPLIT\"] == \"val\"]\n",
+    "        stats_test = [bar for bar in foo if bar[\"SPLIT\"] == \"test\"]\n",
+    "\n",
+    "        for metric in [\n",
+    "            \"DATASET\",\n",
+    "            \"roberta\",\n",
+    "            \"speaker_mode\",\n",
+    "            \"num_past_utterances\",\n",
+    "            \"num_future_utterances\",\n",
+    "        ]:\n",
     "            assert len(set([bar[metric] for bar in foo]))\n",
-    "            \n",
-    "        keyname = ', '.join([f\"{metric}: {foo[0][metric]}\" \n",
-    "                             for metric in ['DATASET', 'roberta', 'speaker_mode', 'num_past_utterances', 'num_future_utterances']])\n",
-    "        \n",
-    "        keyname += f', {str(timestamp)}'\n",
+    "\n",
+    "        keyname = \", \".join(\n",
+    "            [\n",
+    "                f\"{metric}: {foo[0][metric]}\"\n",
+    "                for metric in [\n",
+    "                    \"DATASET\",\n",
+    "                    \"roberta\",\n",
+    "                    \"speaker_mode\",\n",
+    "                    \"num_past_utterances\",\n",
+    "                    \"num_future_utterances\",\n",
+    "                ]\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "        keyname += f\", {str(timestamp)}\"\n",
     "        stats_test_ = {}\n",
-    "        for metric in  ['test_loss', 'test_f1_weighted', 'test_f1_micro', 'test_f1_macro']:\n",
+    "        for metric in [\n",
+    "            \"test_loss\",\n",
+    "            \"test_f1_weighted\",\n",
+    "            \"test_f1_micro\",\n",
+    "            \"test_f1_macro\",\n",
+    "        ]:\n",
     "            stats_test_[metric] = (\n",
-    "                np.mean([foo[metric] for foo in stats_test]), \n",
-    "                np.std([foo[metric] for foo in stats_test]), \n",
-    "                len([foo[metric] for foo in stats_test])\n",
+    "                np.mean([foo[metric] for foo in stats_test]),\n",
+    "                np.std([foo[metric] for foo in stats_test]),\n",
+    "                len([foo[metric] for foo in stats_test]),\n",
     "            )\n",
-    "            \n",
+    "\n",
     "        stats_val_ = {}\n",
-    "        for metric in  ['eval_loss', 'eval_f1_weighted', 'eval_f1_micro', 'eval_f1_macro']:\n",
+    "        for metric in [\n",
+    "            \"eval_loss\",\n",
+    "            \"eval_f1_weighted\",\n",
+    "            \"eval_f1_micro\",\n",
+    "            \"eval_f1_macro\",\n",
+    "        ]:\n",
     "            stats_val_[metric] = (\n",
-    "                np.mean([foo[metric] for foo in stats_val]), \n",
-    "                np.std([foo[metric] for foo in stats_val]), \n",
-    "                len([foo[metric] for foo in stats_val])\n",
+    "                np.mean([foo[metric] for foo in stats_val]),\n",
+    "                np.std([foo[metric] for foo in stats_val]),\n",
+    "                len([foo[metric] for foo in stats_val]),\n",
     "            )\n",
-    "            \n",
+    "\n",
     "        to_return[keyname] = (stats_val_, stats_test_)\n",
-    "        \n",
+    "\n",
     "    to_return = {foo: to_return[foo] for foo in sorted(list(to_return.keys()))}\n",
-    "        \n",
-    "    return to_return        \n",
+    "\n",
+    "    return to_return\n",
+    "\n",
     "\n",
     "def get_average(seed_results):\n",
     "    timestamps = set(list(seed_results.keys()))\n",
     "\n",
     "    to_return = {}\n",
     "    for timestamp in timestamps:\n",
-    "        to_return[timestamp] = {key: (np.mean(list(val)), len(list(val))) for key, val in seed_results[timestamp].items()}\n",
-    "    \n",
+    "        to_return[timestamp] = {\n",
+    "            key: (np.mean(list(val)), len(list(val)))\n",
+    "            for key, val in seed_results[timestamp].items()\n",
+    "        }\n",
+    "\n",
     "    return to_return"
    ]
   },
@@ -263,8 +303,8 @@
     }
    ],
    "source": [
-    "seed_results = glob('*/*/final/*/*-results.json')\n",
-    "seed_results = [foo for foo in seed_results if 'MELD' in foo or 'IEMOCAP' in foo]\n",
+    "seed_results = glob(\"*/*/final/*/*-results.json\")\n",
+    "seed_results = [foo for foo in seed_results if \"MELD\" in foo or \"IEMOCAP\" in foo]\n",
     "seed_results = [(parse_path(foo), read_json(foo)) for foo in seed_results]\n",
     "seed_results = [merge_two_dicts(foo[0], foo[1]) for foo in seed_results]\n",
     "seed_results = return_by_timestamp(seed_results)\n",
@@ -282,8 +322,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed_results = glob('*/*/final/*/*-results.json')\n",
-    "seed_results = [foo for foo in seed_results if 'MELD' in foo or 'IEMOCAP' in foo]\n",
+    "seed_results = glob(\"*/*/final/*/*-results.json\")\n",
+    "seed_results = [foo for foo in seed_results if \"MELD\" in foo or \"IEMOCAP\" in foo]\n",
     "seed_results = [(parse_path(foo), read_json(foo)) for foo in seed_results]\n",
     "seed_results = [merge_two_dicts(foo[0], foo[1]) for foo in seed_results]"
    ]
@@ -295,18 +335,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_by_filter(seed_results, DATASET, SPLIT, num_past_utterances, num_future_utterances, speaker_mode):\n",
-    "    seed_results = [foo for foo in seed_results \n",
-    "                    if foo['DATASET'] == DATASET \\\n",
-    "                    and foo['SPLIT'] == SPLIT \\\n",
-    "                    and foo['num_past_utterances'] == num_past_utterances \\\n",
-    "                    and foo['num_future_utterances'] == num_future_utterances \\\n",
-    "                    and foo['speaker_mode'] == speaker_mode]\n",
-    "    \n",
-    "    if SPLIT == 'test':\n",
-    "        seed_results = sorted(seed_results, key=lambda k: k['test_f1_weighted'])\n",
+    "def get_by_filter(\n",
+    "    seed_results,\n",
+    "    DATASET,\n",
+    "    SPLIT,\n",
+    "    num_past_utterances,\n",
+    "    num_future_utterances,\n",
+    "    speaker_mode,\n",
+    "):\n",
+    "    seed_results = [\n",
+    "        foo\n",
+    "        for foo in seed_results\n",
+    "        if foo[\"DATASET\"] == DATASET\n",
+    "        and foo[\"SPLIT\"] == SPLIT\n",
+    "        and foo[\"num_past_utterances\"] == num_past_utterances\n",
+    "        and foo[\"num_future_utterances\"] == num_future_utterances\n",
+    "        and foo[\"speaker_mode\"] == speaker_mode\n",
+    "    ]\n",
+    "\n",
+    "    if SPLIT == \"test\":\n",
+    "        seed_results = sorted(seed_results, key=lambda k: k[\"test_f1_weighted\"])\n",
     "    else:\n",
-    "        seed_results = sorted(seed_results, key=lambda k: k['eval_f1_weighted'])\n",
+    "        seed_results = sorted(seed_results, key=lambda k: k[\"eval_f1_weighted\"])\n",
     "    return seed_results"
    ]
   },
@@ -342,7 +392,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'MELD', 'test', 0, 0, 'upper')[-1]"
+    "get_by_filter(seed_results, \"MELD\", \"test\", 0, 0, \"upper\")[-1]"
    ]
   },
   {
@@ -377,7 +427,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'IEMOCAP', 'test', 0, 0, 'upper')[-1]"
+    "get_by_filter(seed_results, \"IEMOCAP\", \"test\", 0, 0, \"upper\")[-1]"
    ]
   },
   {
@@ -412,7 +462,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'MELD', 'test', 1000, 0, 'upper')[-1]"
+    "get_by_filter(seed_results, \"MELD\", \"test\", 1000, 0, \"upper\")[-1]"
    ]
   },
   {
@@ -447,7 +497,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'IEMOCAP', 'test', 1000, 0, 'upper')[-1]"
+    "get_by_filter(seed_results, \"IEMOCAP\", \"test\", 1000, 0, \"upper\")[-1]"
    ]
   },
   {
@@ -482,7 +532,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'MELD', 'test', 0, 1000, 'upper')[-1]"
+    "get_by_filter(seed_results, \"MELD\", \"test\", 0, 1000, \"upper\")[-1]"
    ]
   },
   {
@@ -517,7 +567,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'IEMOCAP', 'test', 0, 1000, 'upper')[-1]"
+    "get_by_filter(seed_results, \"IEMOCAP\", \"test\", 0, 1000, \"upper\")[-1]"
    ]
   },
   {
@@ -552,7 +602,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'MELD', 'test', 1000, 1000, 'upper')[-1]"
+    "get_by_filter(seed_results, \"MELD\", \"test\", 1000, 1000, \"upper\")[-1]"
    ]
   },
   {
@@ -587,7 +637,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'IEMOCAP', 'test', 1000, 1000, 'upper')[-1]"
+    "get_by_filter(seed_results, \"IEMOCAP\", \"test\", 1000, 1000, \"upper\")[-1]"
    ]
   },
   {
@@ -622,7 +672,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'MELD', 'test', 1000, 1000, 'None')[-1]"
+    "get_by_filter(seed_results, \"MELD\", \"test\", 1000, 1000, \"None\")[-1]"
    ]
   },
   {
@@ -657,7 +707,7 @@
     }
    ],
    "source": [
-    "get_by_filter(seed_results, 'IEMOCAP', 'test', 1000, 1000, 'None')[-1]"
+    "get_by_filter(seed_results, \"IEMOCAP\", \"test\", 1000, 1000, \"None\")[-1]"
    ]
   }
  ],
